[fix] typo inside email

--- a/templates/validationMail.html.twig
+++ b/templates/validationMail.html.twig
@@ -22,7 +22,7 @@
 
 <p>Nous vous remercions de votre confiance et vous souhaitons une bonne utilisation de nôtre service</p>
 
-<p>L'équipe NAO.</p>
+<p>L'équipe "climate stories".</p>
 
 <p class="disclaimer"> Cet e-mail est généré automatiquement s'il vous est parvenu par erreur
     veuillez nous en excuser et ne pas en tenir compte</p>
