--- a/templates/connectionForms.html.twig
+++ b/templates/connectionForms.html.twig
@@ -1,35 +1,68 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    {{ form_start(form ,{'attr':{'id':'registerForm'}}) }}
-    <div class="form-group row">
-        {{ form_label(form.name) }}
-        {{ form_widget(form.name) }}
-    </div>
-    <div class="form-group row">
-        {{ form_label(form.surname) }}
-        {{ form_widget(form.surname) }}
-    </div>
-    <div class="form-group row">
-        {{ form_label(form.email) }}
-        {{ form_widget(form.email) }}
-    </div>
-    <div class="form-group row">
-        {{ form_label(form.pswd) }}
-        {{ form_widget(form.pswd) }}
-    </div>
-    <div class="form-group row">
-        {{ form_label(form.confirmPswd) }}
-        {{ form_widget(form.confirmPswd)}}
-    </div>
-    <div class="form-group row">
-        {{ form_label(form.termsAgreement) }}
-        {{ form_widget(form.termsAgreement)}}
-    </div>
-    <div class="form-group row">
-        <button class="btn btn-success" type="submit">Envoyer</button>
-    </div>
-    {{ form_end(form) }}
+
+
+      {% if app.request.get('_route') == 'login' %}
+        <div>
+        {% if error %}
+            <div class="alert alert-warning">{{ error.message }}</div>
+        {% endif %}
+            <form action="{{ path('login_check') }}" method="post">
+                <div class="form-group">
+                    <label for="username">Email</label>
+                    <input type="text" id="username" name="_username" value="{{ last_username }}"/>
+                </div>
+                <div class="form-group">
+                    <label for="password">Mot de passe</label>
+                    <input type="password" id="password" name="_password"/>
+                </div>
+                <div class="form-group">
+                    <input type="checkbox" id="remember_me" name="_remember_me" checked />
+                    <label for="remember_me">Se souvenir de moi</label>
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-success" type="submit">Valider</button>
+                    <a class="btn btn-default" href="#">Mot de passe oublié</a>
+                </div>
+            </form>
+        </div>
+      {% endif %}
+
+     {% if app.request.get('_route') == 'register' %}
+        <div>
+            {{ form_start(form ,{'attr':{'id':'registerForm'}}) }}
+        <div class="form-group row">
+            {{ form_label(form.name) }}
+            {{ form_widget(form.name) }}
+        </div>
+        <div class="form-group row">
+            {{ form_label(form.surname) }}
+            {{ form_widget(form.surname) }}
+        </div>
+        <div class="form-group row">
+            {{ form_label(form.email) }}
+            {{ form_widget(form.email) }}
+        </div>
+        <div class="form-group row">
+            {{ form_label(form.pswd) }}
+            {{ form_widget(form.pswd) }}
+        </div>
+        <div class="form-group row">
+            {{ form_label(form.confirmPswd) }}
+            {{ form_widget(form.confirmPswd)}}
+        </div>
+        <div class="form-group row">
+            {{ form_label(form.termsAgreement) }}
+            {{ form_widget(form.termsAgreement)}}
+        </div>
+        <div class="form-group row">
+            <button class="btn btn-success" type="submit">Envoyer</button>
+        </div>
+        {{ form_end(form) }}
+        </div>
+     {% endif %}
+
 
 
 {% endblock %}
