[add] last commit needded before merging to master

--- a/templates/validationMail.html.twig
+++ b/templates/validationMail.html.twig
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -18,7 +18,7 @@
 
 <p>vous avez récemment créé un compte et vous devez maintenant l'activer grâce au lien ci-dessous:</p>
 
-<a href="http://localhost:8001/validation/{{ expireOn }}/{{ email }}/{{ token }}">activer le compte</a>
+<a href="http://localhost:8000/validation/{{ expireOn }}/{{ email }}/{{ token }}">activer le compte</a>
 
 <p>Nous vous remercions de votre confiance et vous souhaitons une bonne utilisation de nôtre service</p>
 
@@ -26,6 +26,5 @@
 
 <p class="disclaimer"> Cet e-mail est généré automatiquement s'il vous est parvenu par erreur
     veuillez nous en excuser et ne pas en tenir compte</p>
-
 </body>
 </html>
