--- a/templates/connectionForms.html.twig
+++ b/templates/connectionForms.html.twig
@@ -23,7 +23,7 @@
                 </div>
                 <div class="form-group">
                     <button class="btn btn-success" type="submit">Valider</button>
-                    <a class="btn btn-default" href="#">Mot de passe oublié</a>
+                    <a class="btn btn-default" href="{{ path('lostPassword') }}">Mot de passe oublié</a>
                 </div>
             </form>
         </div>
@@ -62,6 +62,38 @@
         {{ form_end(form) }}
         </div>
      {% endif %}
+
+      {% if app.request.attributes.get('_route') == 'lostPassword' %}
+        <div>
+            {{ form_start(form, {'attr':{'id':'asNewForm'}}) }}
+            <div class="form-group">
+                {{ form_label(form.email) }}
+                {{ form_widget(form.email) }}
+            </div>
+            <div class="form-group">
+                <button class="btn btn-success" type="submit">Valider</button>
+            </div>
+            {{ form_end(form) }}
+        </div>
+     {% endif %}
+
+    {%if app.request.attributes.get('_route') == 'resetPswd' %}
+        <div>
+            {{ form_start(form)}}
+            <div class="form-group">
+                {{ form_label(form.pswd) }}
+                {{ form_widget(form.pswd) }}
+            </div>
+            <div class="form-group">
+                {{ form_label(form.confirmPswd) }}
+                {{ form_widget(form.confirmPswd) }}
+            </div>
+            <div class="form-group">
+                <button class="btn btn-success" type="submit">Valider</button>
+            </div>
+            {{ form_end(form) }}
+        </div>
+    {% endif %}
 
 
 
