!!major update after user integration!!

--- a/templates/story.html.twig
+++ b/templates/story.html.twig
@@ -6,7 +6,7 @@
     </div>
 
     <div id="abstract">
-        <h2>The project in few a words</h2>
+        <h2>The project in a few words</h2>
          <p>{{ story.abstract }}</p>
     </div>
 
