! major story form update !

--- a/templates/addStory.html.twig
+++ b/templates/addStory.html.twig
@@ -5,112 +5,72 @@
     <div class="pageHeader">
         <h1>Add Your Story</h1>
     </div>
-
+    <div class="well">
         {{ form_start(form ,{'attr':{'id':'addForm'}}) }}
-        <div class="form-group row">
+        <div class="form-group">
             {{ form_label(form.topic) }}
             {{ form_widget(form.topic ,{'attr':{'class':'form-control'}}) }}
+            {{ form_errors(form.topic) }}
         </div>
-        <div class="form-group row">
+        <div class="form-group">
             {{ form_label(form.country) }}
             {{ form_widget(form.country ,{'attr':{'class':'form-control'}}) }}
+            {{ form_errors(form.country) }}
         </div>
-        <div class="form-group row">
-            {{ form_label(form.patronage.organization) }}
-            {{ form_widget(form.patronage.organization,{'attr':{'class':'form-control'}}) }}
+        <div class="form-group">
+            {{ form_label(form.patronage) }}
+            {{ form_widget(form.patronage,{'attr':{'class':'form-control'}}) }}
+            {{ form_errors(form.patronage) }}
         </div>
-         <div class="form-group row">
-             {{ form_label(form.patronage.identity) }}
-            {{ form_widget(form.patronage.identity,{'attr':{'class':'form-control'}}) }}
+        <div class="form-group">
+            {{ form_label(form.investor) }}
+            {{ form_widget(form.investor,{'attr':{'class':'form-control'}}) }}
+            {{ form_errors(form.investor) }}
         </div>
-        <div class="form-group row">
+        <div class="form-group">
             {{ form_label(form.year) }}
             {{ form_widget(form.year ,{'attr':{'class':'form-control'}}) }}
+            {{ form_errors(form.year) }}
         </div>
-        <div class="form-group row">
+        <div class="form-group">
             {{ form_label(form.title) }}
             {{ form_widget(form.title ,{'attr':{'class':'form-control'}}) }}
+            {{ form_errors(form.title) }}
         </div>
         <div class="form-group row">
             {{ form_label(form.abstract) }}
             {{ form_widget(form.abstract ,{'attr':{'class':'form-control'}}) }}
+            {{ form_errors(form.abstract) }}
         </div>
-        <div class="form-group row">
+        <div class="form-group">
             {{ form_label(form.plot) }}
             {{ form_widget(form.plot ,{'attr':{'class':'form-control'}}) }}
+            {{ form_errors(form.plot) }}
         </div>
-        <div class="form-group row">
+        <div class="form-group">
             {{ form_label(form.contactEmail) }}
             {{ form_widget(form.contactEmail ,{'attr':{'class':'form-control'}}) }}
+            {{ form_errors(form.contactEmail) }}
         </div>
-        <div class="form-group row">
+        <div class="form-group">
             {{ form_label(form.contactPlace) }}
             {{ form_widget(form.contactPlace ,{'attr':{'class':'form-control'}}) }}
+            {{ form_errors(form.contactPlace) }}
         </div>
-        <div class="form-group row">
+        <div class="form-group">
             {{ form_label(form.contactPhone) }}
             {{ form_widget(form.contactPhone ,{'attr':{'class':'form-control'}}) }}
+            {{ form_errors(form.contactPhone) }}
         </div>
-        {#<div>
-            {{ form_row(form.urls) }}
-            <a href="#" id="add_url" class="btn btn-default">Ajouter une catégorie</a>
-        </div>#}
-        <div class="form-group row">
+        <div class="form-group">
+            {{ form_label(form.url) }}
+            {{ form_widget(form.url, {'attr':{'class':'form-control'}}) }}
+            {{ form_errors(form.url) }}
+        </div>
+        <div class="form-group">
             <button class="btn btn-success" type="submit">Valider</button>
         </div>
         {{ form_end(form) }}
-
+    </div>
 
 {% endblock %}
-
-{% block javascripts %}
-    {{ parent() }}
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript">
-
-    $(document).ready(function() {
-        var $container = $('#story_urls');
-        var index = $container.find(':input').length;
-
-        $('#add_url').click(function(e) {
-
-            addUrl($container);
-            e.preventDefault();
-            return false;
-        });
-        if (index == 0) {
-
-            addUrl($container);
-
-        } else {
-            $container.children('div').each(function() {
-                addDeleteLink($(this));
-            });
-
-        }
-        function addUrl($container) {
-            var template = $container.attr('data-prototype')
-                    .replace(/__name__label__/g, 'Catégorie n°' + (index+1))
-                    .replace(/__name__/g,        index)
-                ;
-
-            var $prototype = $(template);
-            addDeleteLink($prototype);
-            $container.append($prototype);
-            index++;
-        }
-
-        function addDeleteLink($prototype) {
-            var $deleteLink = $('<a href="#" class="btn btn-danger">Supprimer</a>');
-            $prototype.append($deleteLink);
-            $deleteLink.click(function(e) {
-                $prototype.remove();
-                e.preventDefault(); // évite qu'un # apparaisse dans l'URL
-
-                return false;
-            });
-        }
-    });
-    </script>
-
-    {% endblock %}
