[mod] integrate  fully functional collection type for url to story type form

--- a/templates/addStory.html.twig
+++ b/templates/addStory.html.twig
@@ -62,11 +62,10 @@
             {{ form_widget(form.contactPhone ,{'attr':{'class':'form-control'}}) }}
             {{ form_errors(form.contactPhone) }}
         </div>
-        <div class="form-group">
-            {{ form_label(form.url) }}
-            {{ form_widget(form.url, {'attr':{'class':'form-control'}}) }}
-            {{ form_errors(form.url) }}
-        </div>
+
+            {{ form_row(form.urls) }}
+            <a href="#" id="add_url" class="btn btn-default">Ajouter une catégorie</a>
+
         <div class="form-group">
             <button class="btn btn-success" type="submit">Valider</button>
         </div>
@@ -74,3 +73,58 @@
     </div>
 
 {% endblock %}
+
+{% block javascripts %}
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript">
+
+        $(document).ready(function() {
+            var $container = $('#story_urls');
+            var index = $container.find(':input').length;
+
+            $('#add_url').click(function(e) {
+
+                addUrl($container);
+                e.preventDefault();
+                return false;
+            });
+            if (index == 0) {
+
+                addUrl($container);
+
+            } else {
+                $container.children('div').each(function() {
+                    addDeleteLink($(this));
+                });
+
+            }
+            function addUrl($container) {
+                var template = $container.attr('data-prototype')
+                        .replace(/__name__label__/g, 'link n°' + (index+1))
+                        .replace(/__name__/g,        index)
+                    ;
+
+                var $prototype = $(template);
+                addDeleteLink($prototype);
+                $container.append($prototype);
+                index++;
+            }
+
+            function addDeleteLink($prototype) {
+                var $deleteLink = $('<a href="#" class="btn btn-danger">Supprimer</a>');
+                $prototype.append($deleteLink);
+                $deleteLink.click(function(e) {
+                    $prototype.remove();
+                    e.preventDefault();
+                    return false;
+                });
+            }
+        });
+    </script>
+
+{% endblock %}
+
+
+
+
+
