--- a/templates/story.html.twig
+++ b/templates/story.html.twig
@@ -15,6 +15,17 @@
         <p>{{ story.plot|raw }}</p>
     </div>
 
+    <div id="extResources">
+        <h4>More about {{ story.title }}</h4>
+        <ul class="list-unstyled">
+        {% for url in extResources %}
+            <li>
+                <a href="{{url.href}}">Link {{ loop.index }} </a>
+            </li>
+        {% endfor %}
+        </ul>
+    </div>
+    
     <div id="moreContainer">
 
         <div class="more" id="contact">
