--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a href="#" class="nav-link">Browse</a>
                         </li>
+                        <li class="nav-item">
+                            <a href="{{ path('admin') }}" class="nav-link">Administration</a>
+                        </li>
                     </ul>
                 {% endif %}
             </div>
