[add] begin to integrate pagination rendering

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,7 +1,7 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-    <div id="cardHolder">
+    <div class="cardHolder">
     {% for story in storyList %}
               <div class="storyCard">
                   <div class="cardHeader">
