--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,36 +1,8 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-    <div class="cardHolder">
-    {% for story in storyList %}
-              <div class="storyCard">
-                  <div class="cardHeader">
-                      <h3>{{ story.title }}</h3>
-                  </div>
-                  <p>{{ story.abstract|slice(0,150)|raw }}....</p>
-                  <div class="cardLink">
-                      <a href="{{ path('story',{'storyId':story.id}) }}" class="btn">Read story</a>
-                  </div>
-                  <div class="cardFooter">
-                      <ul class="list-inline">
-                          <li class="list-inline-item">
-                              <i class="fa fa-bookmark-o" aria-hidden="true"></i>
-                              {{ story.topic.type }}
-                          </li>
-                          <li class="list-inline-item">
-                              <i class="fa fa-user-o" aria-hidden="true"></i>
-                              {{ story.user.name}} {{ story.user.surname}}
-                          </li>
-                          <li class="list-inline-item">
-                              <i class="fa fa-globe" aria-hidden="true"></i>
-                              {{ story.country|country}}
-                          </li>
-                      </ul>
-                  </div>
-              </div>
-    {% endfor %}
-    </div>
 
+{{ include('storyCard.html.twig') }}
 
 {% endblock %}
 {% block javascripts %}
