--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,13 +22,19 @@
                 {% if is_granted('ROLE_USER') %}
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a href="{{ path('addStory')}}" class="nav-link">Add your story</a>
+                            <a href="{{ path('addStory')}}" class="nav-link"{{ page == 'addStory' ? 'id="active"' }}>
+                                Add your story
+                            </a>
                         </li>
                         <li class="nav-item">
-                            <a href={{ path('browse', {'pageNumber':1})}} class="nav-link">Browse</a>
+                            <a href="{{ path('browse', {'pageNumber':1})}}" class="nav-link" {{ page == 'browse' ? 'id="active"' }}>
+                                Browse
+                            </a>
                         </li>
                         <li class="nav-item">
-                            <a href="{{ path('admin') }}" class="nav-link">Administration</a>
+                            <a href="{{ path('admin') }}" class="nav-link">
+                                Administration
+                            </a>
                         </li>
                     </ul>
                 {% endif %}
